# parallel-ahe

./: CMakeLists.txt  README.md  setup.py
lib/histogram_equalization/: CMakeLists.txt  equalization_gpu.cu  equalization_gpu_common.cu  helper_cuda.h
lib/histogram_equalization/include/: equalization.hpp  equalization_common.hpp  equalization_gpu.cuh  equalization_parallel.hpp
py_module/: CMakeLists.txt
py_module/histogram_equalization/: __init__.py  histogram_equalization.py  histogram_equalization_py_module.cpp  histogram_equalization_py_module.h  histogram_equalization_py_wrappers.cpp  histogram_equalization_py_wrappers.h
src/: benchmark-hist-equalization.cpp  hist-equalization.cpp  launch_utils.hpp
src/equalization_cpu/: equalization.hpp  equalization_parallel.hpp
src/equalization_cuda/: equalization_gpu.cu  equalization_gpu.cuh  equalization_gpu_common.cu  helper_cuda.h
src/img_utils/: ImageProcessor.hpp  color_conversion.hpp
tests/: CMakeLists.txt  benchmark-hist-equalization.cpp  hist-equalization.cpp
tests/img_utils/: color_conversion.hpp
